--- a/assets/style/cabecalho/nav__bar.css
+++ b/assets/style/cabecalho/nav__bar.css
@@ -34,6 +34,8 @@
     text-transform: uppercase;
 
     color: var(--color__texto1);
+
+    text-decoration: none;
 }
 
 .nav__bar__lista__iten > a::after{
