--- a/assets/style/secao__baner__apresentacao/baner__apresentação.css
+++ b/assets/style/secao__baner__apresentacao/baner__apresentação.css
@@ -1,32 +1,28 @@
 
-.baner__apresentação{
-    padding-left: 80px;
-}
-
-
 .baner__apresentação__geral{
-
+    padding-left: 80px;
     font-family: var(--font__lato);
     width: 100%;
-    height: 80vh; /* remover na versão final, se ficar aqui vai ferrar a responsividade */
-
-   
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
 }
 
-.baner__apresentação__geral > h2{
+.baner__apresentação__conteudo{
+    height: 84vh ;
+    display: flex ;
+    flex-direction: column ;
+    justify-content: center ;
+}
+
+
+.baner__apresentação__conteudo > h2{
     font-size: 70px;
 }
 
-.baner__apresentação__geral > h2 >span{
+.baner__apresentação__conteudo > h2 >span{
     
     font-family: var(--font__lato);
     display: block;
-    font-size: 70px;
+    font-size: 80px;
     font-weight: 800;
 
 }
@@ -59,6 +55,8 @@
     cursor: pointer;
 
     transition: .3s ease-in-out;
+
+    text-decoration: none;
     
 }
 
@@ -67,5 +65,18 @@
     background-color: red;
 }
 
+/* responsavel pelas imagens acionar quando estiver com imagens oficiais */
+/* .carousel-item {
+    background-image: url('../../imagens/DIA-DA-CIENCIA-E-DA-TECNOLOGIA.png');
 
+    
+    
+  }
 
+  .carousel-item:nth-child(2) {
+    background-image: url('../../imagens/garota-em-laboratorio-fazendo-testes.jpg');
+  }
+  
+  .carousel-item:nth-child(3) {
+    background-image: url('../../imagens/jovem-aprendendo-sobre-ciencia-com-cientista-feminina.jpg');
+  } */
