--- a/assets/style/cabecalho/nav__bar__responsivo.css
+++ b/assets/style/cabecalho/nav__bar__responsivo.css
@@ -19,6 +19,10 @@
         height: 0;
         overflow-y: hidden;
         transition: .3s ease-in-out;
+
+        z-index: 1;
+
+        overflow: hidden;
         
     }
    
