--- a/assets/style/secao__baner__apresentacao/baner__apresentação.css
+++ b/assets/style/secao__baner__apresentacao/baner__apresentação.css
@@ -11,11 +11,14 @@
     display: flex ;
     flex-direction: column ;
     justify-content: center ;
+    color: white;
 }
 
 
 .baner__apresentação__conteudo > h2{
     font-size: 70px;
+    color: white;
+    font-weight: 600;
 }
 
 .baner__apresentação__conteudo > h2 >span{
@@ -28,7 +31,6 @@
 }
 
 .baner__apresentação__descrição{
-    margin-top: 30px;
     max-width: 500px;
 }
 
@@ -47,14 +49,14 @@
 
     font-size: 20px;
     font-weight: 600;
-    color: black;
+    color: white;
     
-    border: 1px solid red;
+    border: 1px solid #D31D4E;
     border-radius: 10px;
 
     cursor: pointer;
 
-    transition: .3s ease-in-out;
+    transition: .5s ease-in-out;
 
     text-decoration: none;
     
@@ -62,21 +64,32 @@
 
 .baner__apresentação__pseudo__botao > p > a:hover{
     color: white;
-    background-color: red;
+    background-color: #D31D4E;
 }
 
 /* responsavel pelas imagens acionar quando estiver com imagens oficiais */
-/* .carousel-item {
-    background-image: url('../../imagens/DIA-DA-CIENCIA-E-DA-TECNOLOGIA.png');
+ .carousel-item {
+    background-image: url('../../imagens/solidcolor.png');
 
     
     
   }
 
   .carousel-item:nth-child(2) {
-    background-image: url('../../imagens/garota-em-laboratorio-fazendo-testes.jpg');
+    background-image: url('../../imagens/solidcolor.png');
   }
   
   .carousel-item:nth-child(3) {
-    background-image: url('../../imagens/jovem-aprendendo-sobre-ciencia-com-cientista-feminina.jpg');
-  } */
+    background-image: url('../../imagens/solidcolor.png');
+    
+  } 
+
+  /* .video-carousel{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+  }
+  */
