--- a/assets/style/home/secao__baner__apresentacao/baner__apresentação__responsivo.css
+++ b/assets/style/home/secao__baner__apresentacao/baner__apresentação__responsivo.css
@@ -11,6 +11,18 @@
         padding: 30px;
     }
 
+    .video-carousel2{
+      display: none;
+    }
+    .video-carousel1{
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      zoom: 100%;
+    }
+
 
     
 }
@@ -58,9 +70,14 @@
     
     }
 
+    .ultimo-card{
+      display: none;
+    }
+
 
     
 }
+
 @media (max-height: 500px) {
     .baner__apresentação__conteudo {
       height: auto;
