--- a/assets/style/sobre/valores/secao__valores.css
+++ b/assets/style/sobre/valores/secao__valores.css
@@ -1,5 +1,9 @@
 .secao__valores{
+    position: relative;
+    
+}
 
+.secao__valores__conteudo{
     color: white;
 
     width: 100vw;
@@ -9,13 +13,18 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    
 
-    padding: 60px;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    padding-left: 60px;
+
 }
 
 .secao__valores__conteudo > h2{
+
+    
 
     text-transform: uppercase;
     font-family: var(--font__lato);
@@ -29,3 +38,48 @@
     max-width: 600px;
 }
 
+/* .secao__valores__cards{
+
+    position: absolute;
+    bottom: -160px;
+} */
+
+.grid-container {
+    position: absolute;
+    top: 1550px;    /* isso vai ferra o responsivo */
+    padding: 0 50px;
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 50px;
+
+   
+  }
+  
+  .card {
+    height: auto;
+    background-color: #f0f0f0;
+    padding: 20px;
+    
+  }
+  
+  
+  /* .card-content {
+    flex-grow: 1;
+  } */
+  
+  h2.card-title {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+    overflow: hidden;
+  }
+  
+  p.card-text {
+    font-size: 18px;
+    line-height: 1.4;
+    text-align: center;
+  }
+  
