--- a/assets/style/sobre/atividades/secao__atividades.css
+++ b/assets/style/sobre/atividades/secao__atividades.css
@@ -1,8 +1,7 @@
 .secao__atividades{
     background-color: red;
-    height: 100vh;
-    position: relative;
-    top: 190px;
+    padding: 40px 40px;
+    
 }
 
 .secao__atividades__titulo > h2 {
@@ -11,7 +10,7 @@
     font-weight: bold;
     color: white;
     text-align: center;
-    margin-top: 2.5em;
+    
    
   }
   
@@ -52,6 +51,10 @@
     font-size: 1.125em;
     margin-bottom: 0.625em;
     color: white;
+  }
+
+  .secao__atividades__texto h4{
+    overflow: hidden;
   }
   
   .secao__atividades__cards__descricao {
