--- a/assets/style/sobre/secao__apresentacao/secao__apresentacao.css
+++ b/assets/style/sobre/secao__apresentacao/secao__apresentacao.css
@@ -1,12 +1,14 @@
 .baner__apresentação{
 
     width: 100vw;
-    height: 70vh;
+    height: 80vh;
 
     background-image: url("../../../imagens/examinando-a-amostra-com-microscopio.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    background-repeat: no-repeat;
+    
     
 
 }
