--- a/assets/style/sobre/valores/secao__valores.css
+++ b/assets/style/sobre/valores/secao__valores.css
@@ -1,85 +1,64 @@
-.secao__valores{
-    position: relative;
-    
+.secao__metodologia {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
 }
 
-.secao__valores__conteudo{
-    color: white;
-
-    width: 100vw;
-    height: 80vh;
-    
-    background-image: url("../../../imagens/06-lacem.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    padding-left: 60px;
-
+.secao__metodologia__conteudo {
+  color: white;
+  width: 100vw;
+  height: 70vh;
+  background-image: url("../../../imagens/06-lacem.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 60px;
+  overflow: hidden;
 }
 
-.secao__valores__conteudo > h2{
-
-    
-
-    text-transform: uppercase;
-    font-family: var(--font__lato);
-    font-weight: 700;
-    font-size: 35px;
-    margin-bottom: 20px;
+.secao__metodologia__conteudo > h2 {
+  text-transform: uppercase;
+  font-family: var(--font__lato);
+  font-weight: 700;
+  font-size: 35px;
+  margin-bottom: 20px;
 }
 
-.secao__valores__conteudo > p{
-
-    max-width: 600px;
+.secao__metodologia__conteudo > p {
+  max-width: 600px;
 }
-
-/* .secao__valores__cards{
-
-    position: absolute;
-    bottom: -160px;
-} */
 
 .grid-container {
-    position: absolute;
-    top: 1550px;    /* isso vai ferra o responsivo */
-    padding: 0 50px;
-    width: 100%;
+  position: absolute; /* Alterado */
+  top: 62%; /* Alterado */
+ 
+  padding: 0 50px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+}
 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 50px;
+.card {
+  height: auto;
+  background-color: #f0f0f0;
+  padding: 20px;
+}
 
-   
-  }
-  
-  .card {
-    height: auto;
-    background-color: #f0f0f0;
-    padding: 20px;
-    
-  }
-  
-  
-  /* .card-content {
-    flex-grow: 1;
-  } */
-  
-  h2.card-title {
-    font-size: 30px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    text-align: center;
-    overflow: hidden;
-  }
-  
-  p.card-text {
-    font-size: 18px;
-    line-height: 1.4;
-    text-align: center;
-  }
-  
+h2.card-title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+  overflow: hidden;
+}
+
+p.card-text {
+  font-size: 18px;
+  line-height: 1.4;
+  text-align: center;
+}
+
