--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,6 +17,7 @@
 
     overflow-x: hidden;
     
+    
 
 }
 
@@ -27,7 +28,10 @@ a{
     text-decoration: none;
 }
 
-
+body{
+    overflow: overlay;
+    overflow-x: hidden;
+}
 :root{
 
     /* fonts */
@@ -45,18 +49,15 @@ a{
 
 }
 ::-webkit-scrollbar {
-    width: 8px;
+    background: transparent;
 }
 
-::-webkit-scrollbar-track {
-    background-color: transparent;
+::-webkit-scrollbar-thumb{
+    background: lightgray;
+    border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 4px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
+::-webkit-scrollbar-corner{
+    background: lightgray;
+    border-radius: 10px;
 }
