--- a/assets/style/home/cabecalho/nav__bar.css
+++ b/assets/style/home/cabecalho/nav__bar.css
@@ -7,13 +7,14 @@
 
     
     width: 100%;
-    padding: 0 60px 0 30px ;/* definir um padding para menu caso a logo seja alterada  */
+    height: 10vh;
+    padding: 0 40px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 
-    background-color: var(--color__background);
+    background: linear-gradient(135deg, #182dea, #0d1e61);
 
 
 }
@@ -21,7 +22,9 @@
 .nav__bar__lista{
     display: inherit; /* pega a propriedade display do nav__bar */
     justify-content: space-around;
+    align-items: center;
     width: 40%;
+    padding-top: 20px;
     max-width: 600px;
     min-width: 500px;
 }
@@ -32,7 +35,7 @@
     font-weight: 600;
     text-transform: uppercase;
 
-    color: var(--color__texto1);
+    color: var(--color__texto);
 
     text-decoration: none;
 }
@@ -45,7 +48,7 @@
     content: "";
     width: 0%;
     height: 2px;
-    background-color: #D31D4E;  
+    background-color: var(--color__subtitulo);  
     transition: 0.4s ease-in-out;
 }
 
