--- a/assets/style/home/cabecalho/nav__bar__responsivo.css
+++ b/assets/style/home/cabecalho/nav__bar__responsivo.css
@@ -5,9 +5,9 @@
 
     .nav__bar{
 
-        padding: 0;
-       
-
+        padding: 0 40px;
+        height: 6vh;
+        background: #182dea;
     }
 
   
@@ -15,15 +15,18 @@
 
     .nav__bar__lista{
         
+        padding-top: 0;
+
         max-width: none;
         min-width: 100%;
-        background-color: var(--color__background);
+       
+        background: #172ad4;
 
         visibility: hidden;
         width: 100%;
        
         position: absolute;
-        top: 80px;
+        top: 60px;
         left: 0px;
        
     
@@ -49,30 +52,41 @@
     
     .nav__bar__butom{
         display: block;
-        padding-right: 1.9em;
+        padding-top: 20px;
+
     }
 
     .nav__bar__responsivo{
         visibility: visible;
         height: 200px;
+        
     }
 }
 
 
 @media (max-width: 480px){
-
     
     .nav__bar{
-        padding: 0;
-        padding-top: 10px;
+
+        padding: 0 20px;
+        height: 8vh;
+        background: #182dea;
+
     }
 
-    .nav__bar__logo img{
-        width: 100px;
+    
+
+
+    .nav__bar__butom{
+
+       padding-top: 20px;
+       font-size: 12px;
     }
+
+  
 
     .nav__bar__lista{
-        top: 60px;
+        top: 50px;
         left: 0px;
     }
 } 
