--- a/assets/style/atividades/secao__apresentacao/secao__apresentacao.css
+++ b/assets/style/atividades/secao__apresentacao/secao__apresentacao.css
@@ -9,29 +9,27 @@
     background-position: center;
     background-repeat: no-repeat;
    
-  
-    
-
+    font-family: var(--font__lato);
     
 
 }
 
 
 .baner__apresentação__conteudo{
-    width: 100%;
+   
     height: inherit; /* erdando de baner apresentação */
     padding-left: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.1); /* Cor da camada semi-transparente */
+
     
 }
 
 .baner__apresentação__titulo{
 
     font-size: 60px;
-    color: var(--cor__titulo);
+    color: white;
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -42,7 +40,6 @@
     display: block;
     font-size: 80px;
     font-weight: 800;
-    color: var(--color__subtitulo);
 }
 
 .baner__apresentação__descrição{
