--- a/assets/style/home/secao__baner__apresentacao/baner__apresentação.css
+++ b/assets/style/home/secao__baner__apresentacao/baner__apresentação.css
@@ -4,9 +4,8 @@
     font-family: var(--font__lato);
     width: 100%;
 
-}
-.gradiente-main{
-    background: linear-gradient(-45deg, #253646 20%, #185EA9 80% );
+    background-color: rgba(0, 0, 0, 0.4); /* Cor da camada semi-transparente */
+
 }
 
 .baner__apresentação__conteudo{
@@ -14,28 +13,32 @@
     display: flex ;
     flex-direction: column ;
     justify-content: center ;
-    color: white;
+    color:var(--color__texto);
     
 }
 
 
 .baner__apresentação__conteudo > h2{
     font-size: 70px;
-    color: white;
+    color:var(--cor__titulo);
     font-weight: 600;
 }
 
 .baner__apresentação__conteudo > h2 >span{
     
     font-family: var(--font__lato);
+    text-transform: uppercase;
     display: block;
     font-size: 80px;
     font-weight: 800;
+    color:var(--color__subtitulo);
 
 }
 
 .baner__apresentação__descrição{
     max-width: 500px;
+    font-size: 17px;
+    font-weight: 600;
 }
 
 .baner__apresentação__pseudo__botao > p{
@@ -53,9 +56,9 @@
 
     font-size: 20px;
     font-weight: 600;
-    color: white;
+    color: #f5f5f5;
     
-    border: 1px solid #D31D4E;
+    border: 2px solid var(--color__subtitulo);
     border-radius: 10px;
 
     cursor: pointer;
@@ -67,8 +70,8 @@
 }
 
 .baner__apresentação__pseudo__botao > p > a:hover{
-    color: white;
-    background-color: #D31D4E;
+    color: #f5f5f5;
+    background-color: var(--color__subtitulo);
 }
 
 /* responsavel pelas imagens acionar quando estiver com imagens oficiais */
