--- a/assets/style/home/secao__diferenciais/secao__diferenciais.css
+++ b/assets/style/home/secao__diferenciais/secao__diferenciais.css
@@ -2,7 +2,7 @@
     font-family: var(--font__popins);
     font-size: 1.875em; /* Aumentar o tamanho da fonte do título */
     font-weight: bold;
-    color: white;
+    color:whitesmoke;
     text-align: center;
     margin-top: 2.5em; /* Aumentar a margem superior */
     overflow: hidden;
@@ -14,6 +14,7 @@
     gap: 1.5em;
     padding: 2.5em;
     padding-bottom: 3.75em; /* Aumentar o padding inferior */
+    color:whitesmoke;
   }
   
   .secao__diferenciais__cards {
@@ -40,12 +41,12 @@
     font-weight: bold;
     font-size: 1.125em;
     margin-bottom: 0.625em;
-    color: white;
+  
   }
   
   .secao__diferenciais__cards__descricao {
     font-size: 0.875em;
-    color: white;
+  
   }
 
   
