--- a/assets/style/home/secao_formulario/secao_formulario.css
+++ b/assets/style/home/secao_formulario/secao_formulario.css
@@ -4,23 +4,33 @@
     overflow: hidden;
   }
   
+  .secao__formulario{
+    padding-bottom: 60px;
+  }
   .contato-container{
     padding: 20px;
-    padding-top: 80px;
+    padding-top: 30px;
     overflow: hidden;
+    padding: 30px;
+  }
+  .contato-container h1{
+    color: white;
+    font-family: 'Poppins';
+    font-weight: 600;
+    text-align: center;
   }
   .contato{
     display: flex;
     justify-content: center;
     margin-top: 30px;
   }
-  .contato-texto {
+  .contato-texto > img{
     flex: 0 1 auto; 
-    max-width: 40%; 
-    margin-top: 20px;
-    color: white;
-    font-weight: 600;
-    padding: 20px;
+    width: 100%;
+    height: 70vh;
+    justify-content: left;
+    padding-top: 80px;
+
   }
   .contato-form{
     margin-left: 40px;
@@ -43,7 +53,7 @@
     max-width: 100vw;
     position: relative;
   }
-  .contato-container h1{
+  .contato_container h1{
     font-size: 30px;
     font-weight: 800;
     color: white;
