--- a/assets/style/sobre/instrutores/section__instrutores.css
+++ b/assets/style/sobre/instrutores/section__instrutores.css
@@ -1,6 +1,7 @@
-.secao__isntrutores{
-
-  margin: 60px 0;
+.secao__instrutores{
+  padding: 60px 0;
+  background: linear-gradient(-45deg, #253646 20%, #185EA9 80% );
+  
 }
 
 .secao__instrutores__conteudo {
@@ -16,6 +17,13 @@
   text-align: center;
   font-size: 30px;
   font-weight: 800;
+  overflow: hidden;
+}
+
+.secao__instrutores__titulo h2{
+  color: white;
+  font-weight: 700;
+  overflow: hidden;
 }
 
 .secao__instrutores__cards {
