--- a/assets/style/sobre/valores/secao__valores__responsivo.css
+++ b/assets/style/sobre/valores/secao__valores__responsivo.css
@@ -1,71 +1,102 @@
-/* Adicione as regras de mídia para telas menores */
-@media (max-width: 500px) {
-
-  .secao__metodologia {
-   
-    height: 135vh;
-
+@media only screen and (max-width: 900px){
+  .secao__metodologia{        
+    
+    height: 100vh;
+    
   }
-  .secao__metodologia__conteudo {
-      padding-left: 30px;
-      
-  }
+  .secao__metodologia__valores{ 
 
-  .secao__metodologia__conteudo > h2 {
-      font-size: 25px;
-  }
-
+      bottom: 100px ;
+      gap: 40px;
+      padding: 0 30px;
+}
   
 
-  .grid-container {
-      top: 48%;
-      grid-template-columns:repeat(1, 1fr);
-      gap: 30px;
-      padding: 0 30px;
+} 
+
+@media only screen and (max-width: 600px) {
+
+  .secao__metodologia{
+
+      height: 70vh;
+      
+ 
+  }
+  .secao__metodologia__conteudo {
+     padding: 0 20px;
   }
 
-  .card {
-      padding: 10px;
+  .secao__metodologia__conteudo__titulo {
+      font-size: 30px;
   }
 
-  h2.card-title {
-      font-size: 25px;
-  }
-
-  p.card-text {
-      font-size: 16px;
+  .secao__metodologia__conteudo__descrição {
+      font-size: 15px;
+      
   }
 }
 
 
-@media (min-width: 501px) and (max-width: 900px){
-    .secao__metodologia__conteudo {
-      padding: 0 40px;
-      height: 50vh;
-    }
-  
-    .secao__metodologia__conteudo > h2 {
-      font-size: 30px;
-    }
-    
-    .grid-container {
-        width: 100%;
-      position: absolute;
-      top: 45%;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-    }
-  
-    .card {
-        width: 45%;
-    }
-  
-    h2.card-title {
-      font-size: 30px;
-    }
-  
-    p.card-text {
-      font-size: 18px;
-    }
+
+@media only screen and (max-width: 768px) {
+  .secao__metodologia__valores {
+      position: relative;
+      bottom: 40px;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      padding: 0 20px;
+      margin: 0 ;
+     
   }
+
+
+  .secao__metodologia__valores__cards{
+
+    max-width: 500px;
+    margin: 0 auto;
+
+  }
+}
+
+
+@media only screen and (max-width: 500px){
+
+  .secao__metodologia{        
+    height: 155vh;
+  }
+  
+
+
+  .secao__metodologia__conteudo{
+    padding: 0;
+  }
+
+  .secao__metodologia__conteudo--mascara{
+
+    padding-left: 20px;
+
+  }
+
+  .secao__metodologia__conteudo__descrição{
+
+    max-width: 300px;
+    font-size: 1em;
+  }
+
+  .secao__metodologia__valores{ 
+
+    position: absolute;
+    bottom: 0;
+  
+    display: grid;
+    grid-template-columns:  1fr;
+    gap: 40px;
+    padding: 0;
+  
+  }
+  .secao__metodologia__valores__cards{
+    width: 80%;
+    margin: 0 auto;
+
+  }
+}
