talvez seja o ultimo teste

--- a/assets/style/sobre/valores/secao__valores.css
+++ b/assets/style/sobre/valores/secao__valores.css
@@ -63,7 +63,7 @@
 
 .secao__metodologia__valores__cards{
 
-  background-color: var(--color__subtitulo);
+  background-color: #f83838f8;
   text-align: center;
   padding: 20px 30px;
   border-radius: 15px;
