--- a/assets/style/atividades/secao__apresentacao/secao__apresentacao.css
+++ b/assets/style/atividades/secao__apresentacao/secao__apresentacao.css
@@ -29,7 +29,7 @@
 .baner__apresentação__titulo{
 
     font-size: 60px;
-    color: white;
+    color: var(--cor__titulo);
     font-weight: 600;
     text-transform: uppercase;
 }
@@ -40,6 +40,7 @@
     display: block;
     font-size: 80px;
     font-weight: 800;
+    color: var(--color__subtitulo);
 }
 
 .baner__apresentação__descrição{
@@ -50,3 +51,4 @@
     color: white;
    
 }
+
